refactor: maintain compiler environment identity