@@ -32,7 +32,7 @@ public final class CompilerInputs {
      * source membership/content plus environment, while transactionCurrent() additionally fences on
      * the monotonic epoch so A→B→A during one javac transaction is still detected.
      */
-    public record Snapshot(LiveSourceState live,LiveSourceState.Snapshot sourceState,EnvironmentIdentity environment) {
+    public record Snapshot(LiveSourceState live,LiveSourceState.Snapshot sourceState,EnvironmentIdentity environment,long environmentEpoch) {
         public Snapshot {
             Objects.requireNonNull(live);Objects.requireNonNull(sourceState);Objects.requireNonNull(environment);
         }
@@ -98,15 +98,11 @@ public final class CompilerInputs {
     public static final class Superseded extends IOException { public Superseded(String message){super(message);} }
     private final FileStateRegistry files;
     private Configuration environmentConfiguration;
-    private EnvironmentIdentity environmentIdentity;
+    private LiveEnvironmentState environmentState;
     private Snapshot snapshot;
-    private Map<Path,String> environmentFiles=Map.of();
     private long observations,rebuilds,validationNanos;
     // PR-local live-state-tree evidence. Remove after the final before/after capture.
     private long captureCalls,sourceInventoryCalls,sourceCandidatesInspected,environmentCandidatesInspected;
-    private final Map<Path,Object> environmentEvidence=new HashMap<>();
-    private Set<Path> environmentPaths=Set.of();
-    private List<FileStateRegistry.Inventory> environmentInventories=List.of();
 
     public CompilerInputs(FileStateRegistry files){this.files=Objects.requireNonNull(files);}
 
@@ -116,7 +112,8 @@ public final class CompilerInputs {
             trace.count("captures",1);captureCalls++;observations++;long started=System.nanoTime();
             try{
                 var live=documents.liveState(config.roots());live.verifyTransactionBoundary();var source=live.snapshot();
-                var current=new Snapshot(live,source,environment(config));
+                var environment=environmentSnapshot(config);
+                var current=new Snapshot(live,source,environment.identity(),environment.epoch());
                 if(snapshot==null||snapshot.observation()!=current.observation()||!snapshot.sameInputs(current)){
                     snapshot=current;rebuilds++;RequestScope.count("snapshot_rebuilds",1);
                 }
@@ -138,68 +135,18 @@ public final class CompilerInputs {
         if(expected==null)return false;
         expected.live().verifyTransactionBoundary();
         if(!expected.transactionCurrent())return false;
-        return expected.environment().equals(environment(config));
+        var environment=environmentSnapshot(config);
+        return expected.environmentEpoch()==environment.epoch()&&expected.environment().equals(environment.identity());
     }
 
-    /** The environment boundary remains independently observable from source state. */
-    public synchronized EnvironmentIdentity environment(Configuration config)throws IOException{
-        var paths=new ArrayList<FileStateRegistry.Inventory>();
-        for(Path path:config.classpath()){
-            if(Files.isDirectory(path)){paths.add(files.observeInventory(path,".class",true));paths.add(files.observeInventory(path,".jar",true));}
-            else paths.add(new FileStateRegistry.Inventory(List.of(path),null));
+    /** The environment boundary is mutation-maintained; warm reads drain only queued filesystem events. */
+    public synchronized EnvironmentIdentity environment(Configuration config)throws IOException{return environmentSnapshot(config).identity();}
+    private synchronized LiveEnvironmentState.Snapshot environmentSnapshot(Configuration config)throws IOException{
+        if(environmentState==null||!config.equals(environmentConfiguration)){
+            if(environmentState!=null)environmentState.close();
+            environmentState=new LiveEnvironmentState(files,config);environmentConfiguration=config;
         }
-        var entries=new ArrayList<Path>();
-        var pathOptions=Set.of("--module-path","-p","--upgrade-module-path","--class-path","-classpath","-cp","--processor-path","-processorpath","--processor-module-path","--patch-module","--system",
-                "--source-path","-sourcepath","--module-source-path","--boot-class-path","-bootclasspath",
-                "-extdirs","-endorseddirs","-Djava.ext.dirs","-Djava.endorsed.dirs");
-        for(int i=0;i<config.options().size();i++){
-            String option=config.options().get(i),name=option.contains("=")?option.substring(0,option.indexOf('=')):option;
-            if(option.startsWith("-Xbootclasspath:")||option.startsWith("-Xbootclasspath/a:")||option.startsWith("-Xbootclasspath/p:")){
-                addOptionPaths(entries,option.substring(option.indexOf(':')+1));continue;
-            }
-            if(!pathOptions.contains(name))continue;
-            String value=option.contains("=")?option.substring(option.indexOf('=')+1):i+1<config.options().size()?config.options().get(++i):"";
-            if((name.equals("--patch-module")||name.equals("--module-source-path"))&&value.contains("="))value=value.substring(value.indexOf('=')+1);
-            addOptionPaths(entries,value);
-        }
-        for(Path path:entries)paths.add(Files.isDirectory(path)?files.observeInventory(path,"",true):new FileStateRegistry.Inventory(List.of(path),null));
-        Path home=Path.of(System.getProperty("java.home"));
-        paths.add(new FileStateRegistry.Inventory(List.of(home.resolve("release"),home.resolve("lib/modules"),home.resolve("lib/ct.sym")),null));
-        if(!config.equals(environmentConfiguration)||!paths.equals(environmentInventories)){
-            var keys=new LinkedHashSet<Path>();paths.forEach(p->keys.addAll(p.members()));environmentPaths=Collections.unmodifiableSet(keys);environmentInventories=List.copyOf(paths);
-        }
-        environmentCandidatesInspected+=environmentPaths.size();
-        var env=observeEnvironment(environmentPaths,environmentFiles);
-        if(environmentIdentity==null||!config.equals(environmentConfiguration)||env!=environmentFiles){
-            environmentIdentity=environment(config.generation(),config.roots(),config.options(),List.of(),Map.of(),config.classpath().stream().map(Path::toString).toList(),config.platform(),env);
-        }
-        environmentConfiguration=config;environmentFiles=env;return environmentIdentity;
-    }
-
-    private static void addOptionPaths(List<Path> entries,String value){
-        for(String entry:value.split(java.util.regex.Pattern.quote(File.pathSeparator))){
-            if(entry.isBlank()||entry.equals("none"))continue;
-            int wildcard=entry.indexOf('*'),group=entry.indexOf('{');
-            if(group>=0&&(wildcard<0||group<wildcard))wildcard=group;
-            if(wildcard>=0){
-                int separator=Math.max(entry.lastIndexOf('/',wildcard),entry.lastIndexOf('\\',wildcard));
-                entry=separator<0?".":entry.substring(0,separator+1);
-            }
-            entries.add(Path.of(entry.isEmpty()?".":entry).toAbsolutePath().normalize());
-        }
-    }
-
-    private Map<Path,String> observeEnvironment(Set<Path> paths,Map<Path,String> prior)throws IOException{
-        environmentEvidence.keySet().retainAll(paths);Map<Path,String> updated=null;
-        for(Path file:paths){
-            var disk=files.observe(file);String hash=disk.hash();Object token=disk;
-            if(!Objects.equals(environmentEvidence.put(file,token),token)||!hash.equals(prior.get(file))){
-                if(updated==null)updated=new LinkedHashMap<>(prior);
-                if("missing".equals(hash))updated.remove(file);else updated.put(file,hash);
-            }
-        }
-        for(Path file:prior.keySet())if(!paths.contains(file)){if(updated==null)updated=new LinkedHashMap<>(prior);updated.remove(file);}
-        return updated==null?prior:Collections.unmodifiableMap(updated);
+        return environmentState.verifyBoundary();
     }
 
     public static EnvironmentIdentity environment(String generation,List<Path> roots,List<String> options,List<String> processors,
@@ -222,11 +169,14 @@ public final class CompilerInputs {
         else{byte[] bytes=Objects.toString(value,"").getBytes(StandardCharsets.UTF_8);out.writeByte(3);out.writeInt(bytes.length);out.write(bytes);}
     }
 
-    public synchronized Map<String,Object> status(){return Map.of(
-            "observations",observations,"snapshot_rebuilds",rebuilds,"validation_ns",validationNanos,
-            "capture_calls",captureCalls,"source_inventory_calls",sourceInventoryCalls,
-            "source_candidates_inspected",sourceCandidatesInspected,
-            "environment_candidates_inspected",environmentCandidatesInspected);
+    public synchronized Map<String,Object> status(){
+        var result=new LinkedHashMap<String,Object>();
+        result.put("observations",observations);result.put("snapshot_rebuilds",rebuilds);result.put("validation_ns",validationNanos);
+        result.put("capture_calls",captureCalls);result.put("source_inventory_calls",sourceInventoryCalls);result.put("source_candidates_inspected",sourceCandidatesInspected);
+        result.put("environment_candidates_inspected",environmentCandidatesInspected);
+        result.put("environment_live",environmentState==null?Map.of("initialized",false):environmentState.status());
+        return Map.copyOf(result);
     }
+    public synchronized void close(){if(environmentState!=null){environmentState.close();environmentState=null;}}
     private static List<Path> normalize(List<Path> paths){return paths.stream().map(p->p.toAbsolutePath().normalize()).toList();}
 }
